tests/ui/indent_step_too_large.stderr
error[E0080]: evaluation panicked: `indent_step` must be in the range 1..=65535
 --> tests/ui/indent_step_too_large.rs:2:13
  |
2 |     let _ = serde_saphyr::ser_options! { indent_step: 65536 };
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `main::_` failed here
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `serde_saphyr::ser_options` (in Nightly builds, run with -Z macro-backtrace for more info)
