tests/ui/indent_step_too_large.rs
fn main() {
    let _ = serde_saphyr::ser_options! { indent_step: 65536 };
}
